Warn if a package has no recent releases

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ click = "*"
 thoth-storages = "*"
 ogr = "*"
 google-cloud-bigquery = "*"
+python-dateutil = "*"
 
 [dev-packages]
 types-attrs = "*"
