Apply solver rules to package versions used to generate prescriptions

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ thoth-storages = "*"
 ogr = "*"
 google-cloud-bigquery = "*"
 python-dateutil = "*"
+thoth-python = "*"
 
 [dev-packages]
 types-attrs = "*"
