Finalize logic for new handler
Signed-off-by: Francesco Murdaca <fmurdaca@redhat.com>

--- a/.env.template
+++ b/.env.template
@@ -22,3 +22,4 @@ THOTH_PRESCRIPTIONS_REFRESH_QUAY_TOKEN=<quay-token>
 THOTH_PRESCRIPTIONS_REFRESH_RANDOMIZE
 THOTH_PRESCRIPTIONS_REFRESH_REPO
 THOTH_PRESCRIPTIONS_REFRESH_SUBCOMMAND
+THOTH_USER_API_HOST
