Fix api calls and add PROTOCOL_SCHEMA env variable
Signed-off-by: Francesco Murdaca <fmurdaca@redhat.com>

--- a/.env.template
+++ b/.env.template
@@ -32,3 +32,4 @@ THOTH_PRESCRIPTIONS_REFRESH_CV_PACKAGES="
 opencv-python
 "
 THOTH_PRESCRIPTIONS_DRY_RUN=0
+THOTH_PRESCRIPTIONS_REFRESH_SCHEME_PROTOCOL=http
