--- a/.thoth.yaml
+++ b/.thoth.yaml
@@ -22,6 +22,7 @@ managers:
         - goern
         - harshad16
         - pacospace
+        - mayacostantini
       assignees:
         - sesheta
       labels: [bot]
