Validate prescriptions with adviser schema before creation
Ideally, we should rather not use yaml at all in the Python code in the
various handlers, but Python dicts/prescriptions dataclass (and
yaml.dump() to the prescriptions files).
However, this should at least stop the refresh job to add invalid
prescriptions.

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pyyaml = "*"
 gitpython = "*"
 click = "*"
 thoth-storages = "*"
+thoth-adviser = "*"
 ogr = "*"
 google-cloud-bigquery = "*"
 python-dateutil = "*"
